fluxcd/infrastructure/configs/overlays/production/istio-policies/temple-of-time/allow-nextcloud-redis-intra-cluster.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nextcloud-redis-intra-cluster
spec:
  selector:
    matchLabels:
      app: nextcloud-redis
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/temple-of-time/sa/nextcloud-redis
              - cluster.local/ns/temple-of-time/sa/nextcloud-sentinel
      to:
        - operation:
            ports: ["6379"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nextcloud-sentinel-intra-cluster
spec:
  selector:
    matchLabels:
      app: nextcloud-sentinel-sentinel
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/temple-of-time/sa/nextcloud-sentinel
              - cluster.local/ns/temple-of-time/sa/nextcloud-redis
      to:
        - operation:
            ports: ["26379"]
